2016-11-28  Pedro Alves  <pedro@palves.net>

	* e-hal/src/epiphany-shm-manager.c (shm_alloc_region): Add casts.

2016-11-28  Pedro Alves  <pedro@palves.net>

	* e-hal/src/epiphany-hal.c (e_halt_group): Change return type to
	void.
	(populate_platform_native): Return E_OK.

2016-11-28  Pedro Alves  <pedro@palves.net>

	* e-hal/src/epiphany-hal.c (e_init, ee_soft_reset_core)
	(populate_platform_native): Remove unneeded locals.

2016-11-28  Pedro Alves  <pedro@palves.net>

	* e-hal/src/e-loader.c (ee_set_core_config): Add another pair of
	braces to 'tbl''s initializer.

2016-11-28  Pedro Alves  <pedro@palves.net>

	* e-hal/src/e-loader.c (lookup_sections): Remove 'phdr' local.

2016-11-28  Pedro Alves  <pedro@palves.net>

	* e-lib/src/e_trace.c: Include <string.h>.
	(trace_write): Use memcpy instead of dereferencing type-punned
	pointer.

2016-11-28  Pedro Alves  <pedro@palves.net>

	* e-lib/src/e_mutex_barrier_init.c (e_barrier_init): Remove
	unnecessary 'numcores' local.

2016-11-23  Ola Jeppsson  <ola@adapteva.com>

	* e-hal/src/pal-target.c (pal_read_buf): Don't negate E_ERR
	when returning error.
	(pal_write_buf): Likewise.
	(pal_read_word): Likewise.
	(pal_read_reg): Likewise.

2016-11-23  Ola Jeppsson  <ola@adapteva.com>

	* e-hal/src/e-loader.c (_ee_set_core_config): Support
	linker scripts that places configuration sections in external
	ram.

2016-11-22  Ola Jeppsson  <ola@adapteva.com>

	* configure.ac: Call AX_CXX_COMPILE_STDCXX_11.
	* m4/ax_cxx_compile_stdcxx.m4: New file.
	* m4/ax_cxx_compile_stdcxx_11.m4: New file.

2016-11-17  Ola Jeppsson  <ola@adapteva.com>

	* e-lib/include/e_ic.h (e_irqhandler_t): New typedef.
	(e_irq_attach): Update function prototype. Add cover macro
	that casts handler argument to e_irqhandler_t.
	* e-lib/src/e_irq_attach.c: Change handler type to
	e_irqhandler_t.

2016-11-15  Ola Jeppsson  <ola@adapteva.com>

	* e-hal/src/e-loader.c (ee_set_core_config): Show deprecation
	warning once.
